generated/MiniOberonParser.py
# Generated from grammar/MiniOberon.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniOberonParser ( Parser ):

    grammarFileName = "MiniOberon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'.'", "'='", "':'", "'['", "']'", 
                     "','", "'('", "')'", "'#'", "'+'", "'-'", "'*'", "'/'", 
                     "'MODULE'", "'CONST'", "'TYPE'", "'VAR'", "'BEGIN'", 
                     "'END'", "'PROCEDURE'", "'FUNCTION'", "'OF'", "'ARRAY'", 
                     "'RECORD'", "'INTEGER'", "'REAL'", "'STRING'", "'BOOLEAN'", 
                     "'TRUE'", "'FALSE'", "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", 
                     "'WHILE'", "'DO'", "'FOR'", "'TO'", "'BY'", "'RETURN'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<='", "'>='", "':='", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "MODULE", "CONST", 
                      "TYPE", "VAR", "BEGIN", "END", "PROCEDURE", "FUNCTION", 
                      "OF", "ARRAY", "RECORD", "INTEGER", "REAL", "STRING", 
                      "BOOLEAN", "TRUE", "FALSE", "IF", "THEN", "ELSIF", 
                      "ELSE", "WHILE", "DO", "FOR", "TO", "BY", "RETURN", 
                      "IDENT", "INTLIT", "REALLIT", "STRINGLIT", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "OBERON_COMMENT", "LE", "GE", "ASSIGN", 
                      "LT", "GT" ]

    RULE_program = 0
    RULE_module = 1
    RULE_block = 2
    RULE_declarations = 3
    RULE_constsec = 4
    RULE_constdecl = 5
    RULE_typesec = 6
    RULE_typedecl = 7
    RULE_varsec = 8
    RULE_vardecl = 9
    RULE_type_ = 10
    RULE_basetype = 11
    RULE_arraytype = 12
    RULE_dimlist = 13
    RULE_dimitem = 14
    RULE_elemtype = 15
    RULE_recordtype = 16
    RULE_procdecl = 17
    RULE_paramlist = 18
    RULE_param = 19
    RULE_identlist = 20
    RULE_statseq = 21
    RULE_statement = 22
    RULE_assign = 23
    RULE_call = 24
    RULE_arglist = 25
    RULE_ifstmt = 26
    RULE_whilestmt = 27
    RULE_forstmt = 28
    RULE_returnstmt = 29
    RULE_designator = 30
    RULE_selectors = 31
    RULE_selector = 32
    RULE_exprlist = 33
    RULE_expr = 34
    RULE_relop = 35
    RULE_simpleexpr = 36
    RULE_sign = 37
    RULE_addop = 38
    RULE_term = 39
    RULE_mulop = 40
    RULE_factor = 41
    RULE_boollit = 42
    RULE_number = 43

    ruleNames =  [ "program", "module", "block", "declarations", "constsec", 
                   "constdecl", "typesec", "typedecl", "varsec", "vardecl", 
                   "type_", "basetype", "arraytype", "dimlist", "dimitem", 
                   "elemtype", "recordtype", "procdecl", "paramlist", "param", 
                   "identlist", "statseq", "statement", "assign", "call", 
                   "arglist", "ifstmt", "whilestmt", "forstmt", "returnstmt", 
                   "designator", "selectors", "selector", "exprlist", "expr", 
                   "relop", "simpleexpr", "sign", "addop", "term", "mulop", 
                   "factor", "boollit", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    MODULE=15
    CONST=16
    TYPE=17
    VAR=18
    BEGIN=19
    END=20
    PROCEDURE=21
    FUNCTION=22
    OF=23
    ARRAY=24
    RECORD=25
    INTEGER=26
    REAL=27
    STRING=28
    BOOLEAN=29
    TRUE=30
    FALSE=31
    IF=32
    THEN=33
    ELSIF=34
    ELSE=35
    WHILE=36
    DO=37
    FOR=38
    TO=39
    BY=40
    RETURN=41
    IDENT=42
    INTLIT=43
    REALLIT=44
    STRINGLIT=45
    WS=46
    LINE_COMMENT=47
    BLOCK_COMMENT=48
    OBERON_COMMENT=49
    LE=50
    GE=51
    ASSIGN=52
    LT=53
    GT=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module(self):
            return self.getTypedRuleContext(MiniOberonParser.ModuleContext,0)


        def EOF(self):
            return self.getToken(MiniOberonParser.EOF, 0)

        def getRuleIndex(self):
            return MiniOberonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniOberonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.module()
            self.state = 89
            self.match(MiniOberonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODULE(self):
            return self.getToken(MiniOberonParser.MODULE, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniOberonParser.IDENT)
            else:
                return self.getToken(MiniOberonParser.IDENT, i)

        def block(self):
            return self.getTypedRuleContext(MiniOberonParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = MiniOberonParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(MiniOberonParser.MODULE)
            self.state = 92
            self.match(MiniOberonParser.IDENT)
            self.state = 93
            self.match(MiniOberonParser.T__0)
            self.state = 94
            self.block()
            self.state = 95
            self.match(MiniOberonParser.IDENT)
            self.state = 96
            self.match(MiniOberonParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(MiniOberonParser.DeclarationsContext,0)


        def END(self):
            return self.getToken(MiniOberonParser.END, 0)

        def BEGIN(self):
            return self.getToken(MiniOberonParser.BEGIN, 0)

        def statseq(self):
            return self.getTypedRuleContext(MiniOberonParser.StatseqContext,0)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniOberonParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.declarations()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 99
                self.match(MiniOberonParser.BEGIN)
                self.state = 100
                self.statseq()


            self.state = 103
            self.match(MiniOberonParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constsec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniOberonParser.ConstsecContext)
            else:
                return self.getTypedRuleContext(MiniOberonParser.ConstsecContext,i)


        def typesec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniOberonParser.TypesecContext)
            else:
                return self.getTypedRuleContext(MiniOberonParser.TypesecContext,i)


        def varsec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniOberonParser.VarsecContext)
            else:
                return self.getTypedRuleContext(MiniOberonParser.VarsecContext,i)


        def procdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniOberonParser.ProcdeclContext)
            else:
                return self.getTypedRuleContext(MiniOberonParser.ProcdeclContext,i)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = MiniOberonParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6750208) != 0):
                self.state = 109
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [16]:
                    self.state = 105
                    self.constsec()
                    pass
                elif token in [17]:
                    self.state = 106
                    self.typesec()
                    pass
                elif token in [18]:
                    self.state = 107
                    self.varsec()
                    pass
                elif token in [21, 22]:
                    self.state = 108
                    self.procdecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstsecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniOberonParser.CONST, 0)

        def constdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniOberonParser.ConstdeclContext)
            else:
                return self.getTypedRuleContext(MiniOberonParser.ConstdeclContext,i)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_constsec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstsec" ):
                listener.enterConstsec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstsec" ):
                listener.exitConstsec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstsec" ):
                return visitor.visitConstsec(self)
            else:
                return visitor.visitChildren(self)




    def constsec(self):

        localctx = MiniOberonParser.ConstsecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constsec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MiniOberonParser.CONST)
            self.state = 115
            self.constdecl()
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 116
                    self.match(MiniOberonParser.T__0)
                    self.state = 117
                    self.constdecl() 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 123
            self.match(MiniOberonParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(MiniOberonParser.IDENT, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniOberonParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_constdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstdecl" ):
                listener.enterConstdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstdecl" ):
                listener.exitConstdecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstdecl" ):
                return visitor.visitConstdecl(self)
            else:
                return visitor.visitChildren(self)




    def constdecl(self):

        localctx = MiniOberonParser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MiniOberonParser.IDENT)
            self.state = 126
            self.match(MiniOberonParser.T__2)
            self.state = 127
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniOberonParser.TYPE, 0)

        def typedecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniOberonParser.TypedeclContext)
            else:
                return self.getTypedRuleContext(MiniOberonParser.TypedeclContext,i)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_typesec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypesec" ):
                listener.enterTypesec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypesec" ):
                listener.exitTypesec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypesec" ):
                return visitor.visitTypesec(self)
            else:
                return visitor.visitChildren(self)




    def typesec(self):

        localctx = MiniOberonParser.TypesecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typesec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(MiniOberonParser.TYPE)
            self.state = 130
            self.typedecl()
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 131
                    self.match(MiniOberonParser.T__0)
                    self.state = 132
                    self.typedecl() 
                self.state = 137
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 138
            self.match(MiniOberonParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(MiniOberonParser.IDENT, 0)

        def type_(self):
            return self.getTypedRuleContext(MiniOberonParser.Type_Context,0)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_typedecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedecl" ):
                listener.enterTypedecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedecl" ):
                listener.exitTypedecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedecl" ):
                return visitor.visitTypedecl(self)
            else:
                return visitor.visitChildren(self)




    def typedecl(self):

        localctx = MiniOberonParser.TypedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typedecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(MiniOberonParser.IDENT)
            self.state = 141
            self.match(MiniOberonParser.T__2)
            self.state = 142
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniOberonParser.VAR, 0)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniOberonParser.VardeclContext)
            else:
                return self.getTypedRuleContext(MiniOberonParser.VardeclContext,i)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_varsec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarsec" ):
                listener.enterVarsec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarsec" ):
                listener.exitVarsec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarsec" ):
                return visitor.visitVarsec(self)
            else:
                return visitor.visitChildren(self)




    def varsec(self):

        localctx = MiniOberonParser.VarsecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varsec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(MiniOberonParser.VAR)
            self.state = 145
            self.vardecl()
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146
                    self.match(MiniOberonParser.T__0)
                    self.state = 147
                    self.vardecl() 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 153
            self.match(MiniOberonParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identlist(self):
            return self.getTypedRuleContext(MiniOberonParser.IdentlistContext,0)


        def type_(self):
            return self.getTypedRuleContext(MiniOberonParser.Type_Context,0)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MiniOberonParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.identlist()
            self.state = 156
            self.match(MiniOberonParser.T__3)
            self.state = 157
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basetype(self):
            return self.getTypedRuleContext(MiniOberonParser.BasetypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MiniOberonParser.ArraytypeContext,0)


        def recordtype(self):
            return self.getTypedRuleContext(MiniOberonParser.RecordtypeContext,0)


        def IDENT(self):
            return self.getToken(MiniOberonParser.IDENT, 0)

        def getRuleIndex(self):
            return MiniOberonParser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_" ):
                return visitor.visitType_(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = MiniOberonParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26, 27, 28, 29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.basetype()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.arraytype()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.recordtype()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 4)
                self.state = 162
                self.match(MiniOberonParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasetypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MiniOberonParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MiniOberonParser.REAL, 0)

        def STRING(self):
            return self.getToken(MiniOberonParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MiniOberonParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MiniOberonParser.RULE_basetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasetype" ):
                listener.enterBasetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasetype" ):
                listener.exitBasetype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasetype" ):
                return visitor.visitBasetype(self)
            else:
                return visitor.visitChildren(self)




    def basetype(self):

        localctx = MiniOberonParser.BasetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_basetype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1006632960) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraytypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MiniOberonParser.ARRAY, 0)

        def dimlist(self):
            return self.getTypedRuleContext(MiniOberonParser.DimlistContext,0)


        def OF(self):
            return self.getToken(MiniOberonParser.OF, 0)

        def elemtype(self):
            return self.getTypedRuleContext(MiniOberonParser.ElemtypeContext,0)


        def getRuleIndex(self):
            return MiniOberonParser.RULE_arraytype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraytype" ):
                listener.enterArraytype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraytype" ):
                listener.exitArraytype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraytype" ):
                return visitor.visitArraytype(self)
            else:
                return visitor.visitChildren(self)




    def arraytype(self):
